# tfp

./: .gitignore  CMakeLists.txt  README.md  apptest.gifv  loc  stats
application/: CMakeLists.txt
application/plugins/bode-plot/: BodePlot.cpp  BodePlot.hpp  CMakeLists.txt  Plugin.cpp
application/plugins/butterworth-filter/: ButterworthFilter.cpp  ButterworthFilter.hpp  Plugin.cpp
application/plugins/chebyshev-filter/: CMakeLists.txt  ChebyshevFilter.cpp  ChebyshevFilter.hpp  Plugin.cpp
application/plugins/complex-plane-3d/: CMakeLists.txt  ComplexPlane3D.cpp  ComplexPlane3D.hpp  Plugin.cpp
application/plugins/dpsfg/: CMakeLists.txt  Connection.hpp  ConnectionGraphicsObject.cpp  ConnectionGraphicsObject.hpp  DPSFG.hpp  DPSFGScene.cpp  DPSFGScene.hpp  DPSFGView.cpp  DPSFGView.hpp  Expression.cpp  Expression.hpp  Graph.cpp  Graph.hpp  Node.hpp  NodeGraphicsObject.cpp  NodeGraphicsObject.hpp  Plugin.cpp
application/plugins/elliptic-filter/: EllipticFilter.hpp  Plugin.cpp
application/plugins/pole-zero-plot/: CMakeLists.txt  Plugin.cpp  PoleZeroPlot.cpp  PoleZeroPlot.hpp
application/plugins/std-low-order-filters/: CMakeLists.txt  Plugin.cpp  StandardLowOrderFilter.cpp  StandardLowOrderFilter.hpp
application/plugins/step-impulse-response/: ImpulsePlot.cpp  ImpulsePlot.hpp  Plugin.cpp  StepPlot.cpp  StepPlot.hpp  TimeDomainResponsePlot.cpp  TimeDomainResponsePlot.hpp
application/src/: main.cpp
sfgsym/: CMakeLists.txt
sfgsym/cmake/modules/: TestVisibilityMacros.cmake
sfgsym/include/sfgsym/: init.h
sfgsym/src/: init.c
sfgsym/src/algo/: find_paths.c  mason.c
sfgsym/src/exporters/: expr2dot.c
sfgsym/src/parsers/: expression_parser.c  expression_parser.l  expression_parser.y  expression_parser_collapse_lists.c  expression_parser_replace_exp_function.c
sfgsym/src/sfg/: Connection.cpp  Graph.cpp  Node.cpp  branch.c  graph.c  node.c  path.c
sfgsym/src/symbolic/: Expression.cpp  ExpressionLexer.l  ExpressionParser.y  System.cpp  expression.c  expression_constant_fold.c  expression_eval.c  expression_factor.c  expression_fold_constants.c  expression_normalize.c  subs_table.c
sfgsym/src/util/: Math.cpp  Metric.cpp  RefCounted.cpp  String.cpp  log.c
sfgsym/templates/: config.h.in  config.hpp.in
sfgsym/tests/: main.cpp  test_Expression.cpp  test_expression.cpp  test_expression_parser.cpp
sfgsym/tests/old/: test_Expression.cpp  test_ExpressionManipulator_RationalFunction.cpp  test_ExpressionOptimiser_Constants.cpp  test_ExpressionOptimiser_UselessOperations.cpp  test_Expression_parser.cpp
sfgsym/tests/src/: main.c  run_tests.cpp  test_algo_find_loops.cpp  test_algo_find_paths.cpp  test_algo_mason.cpp  test_expression.cpp  test_expression_factor_add_sub.cpp  test_expression_parser.cpp  test_expression_simplify_redundant_ops.cpp  test_mason_gain_rule.cpp
tfp/: .gitignore  CMakeLists.txt
tfp/forms/: MainWindow.ui  SettingsView.ui
tfp/include/tfp/: ErrorCode.hpp  Exceptions.hpp  config.hpp.in  tfp.hpp
tfp/plugins/bode-plot/: BodePlot.cpp  BodePlot.hpp  CMakeLists.txt
tfp/plugins/butterworth-filter/: ButterworthFilter.cpp  ButterworthFilter.hpp  CMakeLists.txt  Plugin.cpp
tfp/plugins/chebyshev-filter/: ChebyshevFilter.cpp  ChebyshevFilter.hpp  Plugin.cpp
tfp/plugins/complex-plane-3d/: CMakeLists.txt  ComplexPlane3D.cpp  ComplexPlane3D.hpp
tfp/plugins/dpsfg/: CMakeLists.txt  DPSFG.cpp  DPSFG.hpp  DPSFGScene.cpp  DPSFGView.cpp  DPSFGView.hpp  NodeGraphicsObject.cpp  Plugin.cpp
tfp/plugins/elliptic-filter/: CMakeLists.txt  EllipticFilter.cpp  EllipticFilter.hpp  Plugin.cpp
tfp/plugins/pole-zero-plot/: CMakeLists.txt  PoleZeroPlot.cpp  PoleZeroPlot.hpp
tfp/plugins/std-low-order-filters/: CMakeLists.txt  StandardLowOrderFilter.cpp  StandardLowOrderFilter.hpp
tfp/plugins/step-impulse-response/: CMakeLists.txt  ImpulsePlot.hpp  Plugin.cpp  StepPlot.hpp  TimeDomainResponsePlot.cpp  TimeDomainResponsePlot.hpp
tfp/src/: ErrorCode.cpp  Util.cpp  main.cpp  tfp.cpp
tfp/src/math/: CoefficientPolynomial.cpp  Connection.cpp  Expression.cpp  ExpressionManipulator.cpp  ExpressionManipulator_RationalFunction.cpp  ExpressionOptimiser.cpp  ExpressionOptimiser_Constants.cpp  ExpressionOptimiser_Simplifications.cpp  ExpressionOptimiser_UselessOperations.cpp  ExpressionParser.cpp  Expression_manipulator.cpp  Expression_optimiser.cpp  Expression_optimiser_constantExpressions.cpp  Expression_optimiser_factor.cpp  Expression_optimiser_uselessOperations.cpp  Expression_parser.cpp  Graph.cpp  Math.cpp  Node.cpp  RootPolynomial.cpp  SymbolicMatrix.cpp  System.cpp  TransferFunction.cpp  VariableTable.cpp
tfp/src/models/: Config.cpp  Math.cpp  Metric.cpp  RefCounted.cpp  String.cpp  System.cpp  Translation.cpp
tfp/src/plot/: AutoScaler.cpp  ColourPalette.cpp  DeltaPlotPicker.cpp  MousePlotPickerMachine.cpp  Panner.cpp  RectangleZoomer.cpp  UnitTracker.cpp  Zoomer.cpp
tfp/src/plugin/: Plugin.cpp  PluginManager.cpp  Tool.cpp
tfp/src/util/: Logger.cpp  Metric.cpp  Plugin.cpp  PluginManager.cpp  PluginWidget.cpp  RefCounted.cpp  String.cpp  Tear.cpp  Tears.cpp  Util.cpp
tfp/src/views/: AdjustmentWidget.cpp  BodePlot.cpp  ComplexPlane3D.cpp  DataTree.cpp  DataTreeView.cpp  DynamicSystemConfig.cpp  DynamicSystemVisualiser.cpp  FloatAdjustmentWidget.cpp  ImpulsePlot.cpp  InfiniSliderWidget.cpp  MainWindow.cpp  PoleZeroPlot.cpp  RealtimePlot.cpp  RealtimePlot3D.cpp  SettingsView.cpp  StandardLowOrderFilter.cpp  StepPlot.cpp  SystemManipulator.cpp  SystemVisualiser.cpp  Tool.cpp  (+2 more)
tfp/tests/: run_tests_all.cpp  run_tests_api.cpp  run_tests_tfp.cpp  test_Expression.cpp  test_ExpressionManipulator_RationalFunction.cpp  test_ExpressionOptimiser_Constants.cpp  test_ExpressionOptimiser_Simplifications.cpp  test_Expression_manipulator.cpp  test_Expression_optimiser.cpp  test_Expression_optimiser_constantExpressions.cpp  test_Expression_optimiser_factor.cpp  test_Expression_optimiser_uselessOperations.cpp  test_Expression_parser.cpp  test_Graph.cpp  test_Node.cpp  test_StateSpace.cpp  test_SymbolicMatrix.cpp  test_SymbolicStateSpace.cpp  test_VariableTable.cpp
(+177 files in other folders)
